SERVER-24630 Mongos erroneously advances config optime for writes that fail write concern.

Use getLastOpCommitted rather than getLastOpVisible in sharding.