src/mongo/s/client/shard_registry.h
@@ -333,7 +333,6 @@ private:
     struct CommandResponse {
         BSONObj response;
         BSONObj metadata;
-        repl::OpTime visibleOpTime;
     };
 
     /**
